# lattice

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: daily-poll.yml
.streamlit/: config.toml
analysis/: bill_analyzer.py  conflict_detector.py  model_legislation.py  money_trail.py  predictor.py  similarity.py
app/: app.py
app/components/: bill_card.py  data.py  money_trail.py  sidebar.py  similarity_chart.py  theme.py
app/pages/: 1_bills.py  2_legislators.py  3_predictions.py  4_flags.py  4_methodology.py  5_methodology.py
db/: schema.sql  seed.py
ingestion/: campaign_finance.py  db.py  legiscan.py  lobbyist.py  statutes.py
scripts/: bulk_process.py  generate_embeddings.py  import_ftm_csv.py  run_analysis.py  scrape_la_ethics.py  train_predictor.py
tests/: test_analyzer.py  test_legiscan.py  test_money_trail.py
